# Content_Writer

./: README.md
content_writer/: pyproject.toml
content_writer/content_writer/: .env  RBI.py  agents_tasks_rbi.py  app.py  business_plan(1).md  types_for_crew.py
content_writer/content_writer/1/: app.py  budgetting.md  business_plan.md  env.example  input_types.py  result.JSON  result.md  test.py
content_writer/content_writer/1/0.Refined_Business_idea/0/: agents.py  app.py  tasks.py  types_for_task.py
content_writer/content_writer/1/0.Refined_Business_idea/RBI/: RBI.py  agents_tasks_rbi.py
content_writer/content_writer/1/1.Business_Analyst/BA/: BA.py  agents_tasks.py  agents_tasks_ba.py  budgetting.csv  budgetting.md
content_writer/content_writer/1/2.Marketing_Strategy/MS/: MS.py  agents_tasks.py  budgetting.md  business_plan.md
content_writer/content_writer/1/3.Policies/P/: P.py  agents_tasks_p.py
content_writer/content_writer/1/docs copy/: broken_down_info.csv  broken_down_info.md  budgetting.md  business_plan.md  company_policy_document_output.md  gov_policy_output.csv  market_research_output.csv  marketing_planning_output.csv  marketing_strategy_output.md  refined_business_idea.md  refined_business_plan.md  strategy_layout_output.csv
content_writer/docs/: broken_down_info.md  budgetting.md  company_policy_document_output.md  gov_policy_output.csv  market_research_output.csv  marketing_planning_output.csv  marketing_strategy_output.md  refined_business_plan.md  slogans.md  strategy_layout_output.csv
(+26 files in other folders)
