[tool.poetry]
name = "content-writer"
version = "0.1.0"
description = ""
authors = ["smashhar <syed.muhammad.ashhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.13,>=3.10"
crewai = "0.28.8"
crewai-tools = "0.1.6"
langchain-groq = "0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
